--- a/package.json
+++ b/package.json
@@ -17,21 +17,27 @@
     "hardhat": "^2.22.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
-    "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
+    "@chainlink/contracts": "^1.2.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.7",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@nomicfoundation/hardhat-viem": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@pendle/core-v2": "^5.0.4",
+    "@prb/math": "^4.0.3",
+    "@typechain/ethers-v5": "^7.2.0",
+    "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.2.0",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^6.13.2",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
-    "typescript": "~5.0.4",
-    "viem": "^2.7.6"
+    "typescript": "~5.0.4"
   }
 }
