added gnu license

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oracles",
+  "name": "@zerolendxyz/oracles",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "compile": "hardhat compile"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/contracts": "^5.0.2",
