--- a/package.json
+++ b/package.json
@@ -10,24 +10,36 @@
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
+    "@matterlabs/hardhat-zksync": "^1.3.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@pythnetwork/pyth-evm-js": "^1.46.0",
     "@pythnetwork/pyth-sdk-solidity": "^3.1.0",
+    "@storknetwork/stork_chainlink_adapter": "^1.0.4",
     "dotenv": "^16.4.5",
     "hardhat": "^2.22.4",
     "hardhat-deploy": "^0.12.4",
-    "viem": "^2.21.1"
+    "viem": "^2.21.1",
+    "zksync-ethers": "^6.15.3"
   },
   "devDependencies": {
     "@chainlink/contracts": "^1.2.0",
+    "@matterlabs/hardhat-zksync-deploy": "^1.6.0",
+    "@matterlabs/hardhat-zksync-solc": "^1.2.5",
+    "@matterlabs/hardhat-zksync-verify": "^1.7.1",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.7",
+    "@nomicfoundation/hardhat-ignition": "^0.15.9",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.9",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.9",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@pendle/core-v2": "^5.0.4",
     "@prb/math": "^4.0.3",
     "@typechain/ethers-v5": "^7.2.0",
+    "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^7.1.6",
